# omnibase_ws

./: README.md  readme.md
cbf_stl_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
cbf_stl_ws/install/cbf_stl_pkg/lib/cbf_stl_pkg/: cbf_stl_node
cbf_stl_ws/install/cbf_stl_pkg/share/cbf_stl_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
cbf_stl_ws/install/check_obstacle_pkg/lib/check_obstacle_pkg/: check_obstacle_node
cbf_stl_ws/install/check_obstacle_pkg/share/check_obstacle_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
cbf_stl_ws/install/manager_cbf_stl_pkg/lib/manager_cbf_stl_pkg/: manager_cbf_stl_node
cbf_stl_ws/install/manager_cbf_stl_pkg/share/manager_cbf_stl_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
cbf_stl_ws/install/my_interfaces/share/my_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  (+1 more)
cbf_stl_ws/log/: latest_build
cbf_stl_ws/src/: readme.md
cbf_stl_ws/src/cbf_stl_pkg/: CMakeLists.txt  package.xml
cbf_stl_ws/src/cbf_stl_pkg/launch/: cbfstl.launch.py
cbf_stl_ws/src/cbf_stl_pkg/src/: cbf_stl_node.cpp
cbf_stl_ws/src/check_obstacle_pkg/: package.xml  setup.cfg  setup.py
cbf_stl_ws/src/check_obstacle_pkg/check_obstacle_pkg/: check_obstacle_node.py
cbf_stl_ws/src/manager_cbf_stl_pkg/: CMakeLists.txt
cbf_stl_ws/src/manager_cbf_stl_pkg/src/: manager_cbf_stl_node.cpp
cbf_stl_ws/src/my_interfaces/: CMakeLists.txt
cbf_stl_ws/src/my_interfaces/msg/: Input.msg
cbf_stl_ws/src/my_interfaces/srv/: InputRequest.srv
cbf_stl_ws/src/pal_tts_msgs/: readme.txt
simulation_data/: data_user_10_operator_F.csv  data_user_11_operator_G.csv  data_user_12_operator_G.csv  data_user_13_operator_G.csv  data_user_14_operator_G.csv  data_user_15_operator_G.csv  data_user_16_operator_G.csv  data_user_17_operator_G.csv  data_user_18_operator_G.csv  data_user_19_operator_G.csv  data_user_1_operator_F.csv  data_user_20_operator_G.csv  data_user_21_operator_U.csv  data_user_22_operator_U.csv  data_user_23_operator_U.csv  data_user_24_operator_U.csv  data_user_25_operator_U.csv  data_user_26_operator_U.csv  data_user_27_operator_U.csv  data_user_28_operator_U.csv  data_user_29_operator_U.csv  data_user_2_operator_F.csv  data_user_30_operator_U.csv  data_user_31_operator_CA.csv  data_user_32_operator_CA.csv  data_user_33_operator_CA.csv  data_user_34_operator_CA.csv  data_user_35_operator_CA.csv  data_user_36_operator_DA.csv  data_user_3_operator_F.csv  data_user_4_operator_F.csv  data_user_5_operator_F.csv  data_user_6_operator_F.csv  data_user_7_operator_F.csv  data_user_8_operator_F.csv  data_user_9_operator_F.csv  plot.py  readme.md  results.py  tecnopolo_map.pgm  (+1 more)
zed2_camera_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
zed2_camera_ws/log/: latest_build
zed2_camera_ws/src/: readme.md
zed2_camera_ws/src/zed2_camera_pkg/: CMakeLists.txt  package.xml
zed2_camera_ws/src/zed2_camera_pkg/launch/: zed2_camera.launch.py
zed2_camera_ws/src/zed2_camera_pkg/src/: zed2_camera_node.cpp
(+977 files in other folders)
