<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cbf_stl_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="241627@studenti.unimore.it">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Insert here your dependences -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>my_interfaces</depend>
  <depend>nav_msgs</depend>
  <!-- ____________________________ -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <buildtool_depend>eigen3_cmake_module</buildtool_depend>
  <build_depend>eigen</build_depend>
  



  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
